Added a few more posts

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -23,8 +23,9 @@ $navbar-tab-active-color: $selfmadedeveloper-yellow
   box-shadow:none !important
 
 .image .hero-logo
-  width: 70%
+  width: 60%
   margin: auto
+  margin-top: 5px
 
 .content .taglist
   list-style: none
