--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -6,29 +6,38 @@
 // Kalidi logo brand color: #FDBB0B
 $selfmadedeveloper-yellow: #FDBB0B
 $selfmadedeveloper-yellow-invert: #FFF
-$body-color: #0a0a0a
+$default-black: #0a0a0a
 
 $primary: $selfmadedeveloper-yellow
 $primary-invert: $selfmadedeveloper-yellow-invert
+$navbar-item-color: $selfmadedeveloper-yellow-invert
 $navbar-item-hover-color: $selfmadedeveloper-yellow
-$navbar-tab-active-color: $selfmadedeveloper-yellow
+$navbar-item-active-color: $selfmadedeveloper-yellow
 $break-small: 578px
 $break-medium: 900px
 $break-large: 1200px
-$border-radius: 6px
+$border-radius: 5px
+$default-margin-top: 6em
 
 *
   transition: 0.3s
   font-family: 'Lato', sans-serif
 
-html
-  background-color: $body-color
-
-.navbar
-  font-family: 'Oswald', sans-serif
-
 .navbar .navbar-menu
   box-shadow:none !important
+  background-color: $default-black
+
+.navbar-item
+  font-family: 'Oswald', sans-serif
+  text-transform: uppercase
+  letter-spacing: 0.4px
+
+.navbar-item:hover
+  background-color: $default-black !important
+  color: $selfmadedeveloper-yellow !important
+
+.navbar-item.is-active
+  color: $selfmadedeveloper-yellow
 
 .image .hero-logo
   width: 10%
@@ -68,7 +77,7 @@ html
   margin-top: 0 !important
 
 .posts-container
-  margin-top: 6em
+  margin-top: $default-margin-top
   background-color: $selfmadedeveloper-yellow-invert
   display: grid
   grid-template-columns: repeat(3, 1fr)
@@ -79,6 +88,9 @@ html
   @media screen and (max-width: $break-small)
     grid-template-columns: fit-content(100%)
 
+.post-container
+  color: $default-black
+
 .post
   -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, .15)
   -moz-box-shadow: 0 2px 5px rgba(0, 0, 0, .15)
@@ -88,18 +100,31 @@ html
   border-width: 0px
   background-color: $selfmadedeveloper-yellow-invert
 
+.post:hover
+    -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, .15)
+    -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, .15)
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .15)
+
 .post-title
   text-transform: uppercase
   font-family: 'Oswald', sans-serif
   font-size: 20px
 
 .post-date
-  float: right
+  justify-content: flex-end
+  display: flex
   padding-top: 1em
 
 .post-thumbnail
   width: 100%
   padding-top: 1em
   padding-bottom: 1em
+
+.blog-post-container
+  margin-top: $default-margin-top
+
+.blog-post-title
+  text-transform: uppercase
+  font-family: 'Oswald', sans-serif
 
 @import "~bulma"
