changes in the UI

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -9,6 +9,7 @@ $selfmadedeveloper-yellow-invert: #FFF
 $default-black: #0a0a0a
 
 $primary: $selfmadedeveloper-yellow
+$secondary: $default-black
 $primary-invert: $selfmadedeveloper-yellow-invert
 $navbar-item-color: $selfmadedeveloper-yellow-invert
 $navbar-item-hover-color: $selfmadedeveloper-yellow
@@ -36,7 +37,7 @@ $default-margin-top: 6em
   background-color: $default-black !important
   color: $selfmadedeveloper-yellow !important
 
-.navbar-item.is-active
+.is-active
   color: $selfmadedeveloper-yellow
 
 .image .hero-logo
@@ -109,6 +110,7 @@ $default-margin-top: 6em
   text-transform: uppercase
   font-family: 'Oswald', sans-serif
   font-size: 20px
+  color: $default-black
 
 .post-date
   justify-content: flex-end
