Fixed paddings in blog posts

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -125,11 +125,10 @@ $default-margin: 4em
   padding-top: 1em
   padding-bottom: 1em
 
-// .blog-post-container
-//   margin-top: $default-margin
-
 .blog-post-title
   text-transform: uppercase
   font-family: 'Oswald', sans-serif
+  padding-bottom: $default-margin/2
+  margin-bottom: 0 !important
 
 @import "~bulma"
