removed spare padding from the icons

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -42,6 +42,7 @@ $default-margin: 4em
 
 .navbar-end .icons-container a
   padding: 0.5em
+  padding-bottom: 0
 
 .navbar-menu a svg:hover #github
   fill: $selfmadedeveloper-yellow
