Added nwesletter form

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -3,7 +3,6 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald:400,600,700')
 
 // Config vars
-// Kalidi logo brand color: #FDBB0B
 $selfmadedeveloper-yellow: #FDBB0B
 $selfmadedeveloper-yellow-invert: #FFF
 $default-black: #0a0a0a
@@ -151,5 +150,22 @@ $default-margin: 4em
   font-family: 'Oswald', sans-serif
   padding-bottom: $default-margin/2
   margin-bottom: 0 !important
+
+.form-container
+  background-color: $default-black
+  border: 2px solid
+  border-radius: $border-radius
+  border-color: $default-black
+
+.form-title
+  text-transform: uppercase
+  font-family: 'Oswald', sans-serif
+  font-size: 20px
+  color: $primary-invert
+
+.form-subtitle
+  font-family: 'Oswald', sans-serif
+  color: $primary
+
 
 @import "~bulma"
