--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -67,11 +67,24 @@ $default-margin: 4em
 .content-container
   padding-top: $default-margin
 
+.tags-header
+  padding: $default-margin/2 0
+  font-family: 'Oswald', sans-serif
+  text-transform: uppercase
+  margin-bottom: 0px !important
+  color: $default-black
+
+.taglist-container
+  margin-top: 3rem
+
+.taglist-header
+  font-family: 'Oswald', sans-serif
+  text-transform: uppercase
+
 .content .taglist
   list-style: none
   margin-bottom: 0
   margin-left: 0
-  margin-right: 1.5rem
   margin-top: 1.5rem
   display: flex
   flex-wrap: wrap
@@ -167,5 +180,22 @@ $default-margin: 4em
   font-family: 'Oswald', sans-serif
   color: $primary
 
+.footer
+  background-color: $default-black !important
+  padding: 0 !important
+
+.footer .copyright
+  text-transform: uppercase
+  letter-spacing: 0.6px
+  font-family: 'Oswald', sans-serif
+  font-size: 12px
+  text-align: center
+  color: $primary
+  padding-bottom: 12px
+
+.link
+  color: $default-black
+  text-transform: uppercase
+  font-family: 'Oswald', sans-serif
 
 @import "~bulma"
