--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -158,6 +158,10 @@ $default-margin: 4em
   padding-top: 1em
   padding-bottom: 1em
 
+.post-inside-thumbnail
+  width: 45% !important
+  height: 45% !important
+
 .blog-post-title
   text-transform: uppercase
   font-family: 'Oswald', sans-serif
