Added youtube icon

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -52,6 +52,9 @@ $default-margin: 4em
 .navbar-menu a svg:hover #twitter
   fill: $selfmadedeveloper-yellow
 
+.navbar-menu a svg:hover #youtube
+  fill: $selfmadedeveloper-yellow
+
 .navbar-item:hover
   background-color: $default-black !important
   color: $selfmadedeveloper-yellow !important
