--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -228,4 +228,38 @@ $default-margin: 4em
   .field
     padding-right: 0.75rem
 
+.links-page
+  background-color: $default-black
+  display: flex
+  justify-content: center
+  flex-direction: column
+  align-items: center
+  height: 100%
+
+.links-title
+  padding: 1rem 0
+  color: $primary-invert
+  font-size: 1.7rem
+  text-align: center
+  text-transform: uppercase
+
+.links-paragraph
+  color: $primary-invert
+  padding-bottom: 0.2rem
+  font-size: 1rem
+  text-align: center
+  text-transform: uppercase
+  .colored
+    color: $primary
+
+.links-Logo
+  width: 50%
+  height: auto
+  padding: 1rem 0
+  align-items: center
+  #logrocket
+    width: 35%
+  @media screen and (max-width: $break-small)
+    width: 60%
+
 @import "~bulma"
