Deleted spare pages

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -25,7 +25,8 @@ $default-margin: 4em
 
 html, body
   height: 100%
-
+.layout
+  height: 100%
 .navbar .navbar-menu
   box-shadow:none !important
   background-color: $default-black
@@ -239,7 +240,7 @@ html, body
 .links-page
   background-color: $default-black
   display: flex
-  justify-content: center
+  justify-content: space-evenly
   flex-direction: column
   align-items: center
   height: 100%
@@ -255,7 +256,6 @@ html, body
 
 .links-paragraph
   color: $primary-invert
-  padding-bottom: 0.2rem
   font-size: 1rem
   text-align: center
   text-transform: uppercase
