--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -26,9 +26,8 @@ $default-margin: 4em
 html,
 body,
 #___gatsby,
-#gatsby-focus-wrapper {
+#gatsby-focus-wrapper
   height: 100%;
-}
 
 .layout
   height: 100%
