--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -257,7 +257,7 @@ body,
 
 .links-title
   padding: 1rem 0
-  color: $primary-invert
+  color: $primary-invert !important
   font-size: 1.5rem
   text-align: center
   text-transform: uppercase
