--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -15,6 +15,7 @@ $navbar-item-hover-color: $selfmadedeveloper-yellow
 $navbar-item-active-color: $selfmadedeveloper-yellow
 $break-small: 578px
 $break-medium: 900px
+$break-big: 1024px
 $break-large: 1200px
 $border-radius: 5px
 $default-margin: 4em
@@ -299,5 +300,28 @@ body,
     font-size: 0.75rem
     padding-left: 1rem
     text-align: left
+
+.navbar-logo
+  max-width: 30%
+  margin-right: 0.75rem
+  padding-top: 0.5rem
+  padding-bottom: 0.5rem
+  @media screen and (max-width: $break-big)
+    max-width: 15%
+  @media screen and (max-width: $break-medium)
+    max-width: 20%
+  @media screen and (max-width: $break-small)
+    max-width: 30%
+
+#logo-footer
+  width: 10%
+  margin: auto
+  padding-bottom: 0.5rem
+  @media screen and (max-width: $break-big)
+   width: 12%
+  @media screen and (max-width: $break-medium)
+   width: 13%
+  @media screen and (max-width: $break-small)
+   width: 20%
 
 @import "~bulma"
