--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -384,6 +384,14 @@ body,
   .colored
     color: $primary
 
+.links-paragraph-title
+  color: $primary-invert
+  font-size: 1.2em
+  text-align: center
+  text-transform: uppercase
+  .colored
+    color: $primary
+
 .links-Logo
   width: 25%
   height: auto
