More fixes in the design

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -195,6 +195,13 @@ body,
   margin-right: 1em
   @media screen and (max-width: $break-small)
     margin-right: 0.5em
+.is-index-0
+  height: 12em
+  width: 12em
+  @media screen and (max-width: $break-small)
+    width: 10em
+    height: 10em
+
 
 .post-excerpt
   padding-left: 1em
@@ -252,7 +259,7 @@ body,
   -webkit-box-shadow: 0 2px 20px rgba(0, 0, 0, .15)
   -moz-box-shadow: 0 2px 20px rgba(0, 0, 0, .15)
   box-shadow: 0 2px 20px rgba(0, 0, 0, .15)
-  
+
 .form-container:hover
   transform: $transformScale
 
