--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -276,7 +276,7 @@ body,
 
 .footer
   background-color: $default-black !important
-  padding: 0 !important
+  padding: 2em !important
 
 .footer .copyright
   text-transform: uppercase
