--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -31,7 +31,7 @@ html,
 body,
 #___gatsby,
 #gatsby-focus-wrapper
-  height: 100%;
+  height: 100%
 
 .layout
   height: 100%
@@ -40,7 +40,7 @@ body,
   padding-top: 0.5em
   padding-bottom: 0.5em
   .navbar-menu
-    box-shadow:none !important
+    box-shadow: none !important
     background-color: $default-black
 
 .navbar-burger span
@@ -51,7 +51,6 @@ body,
   font-family: $fontOswald
   text-transform: uppercase
   letter-spacing: 0.4px
-
 
 .icons-container
   align-items: center
@@ -123,7 +122,6 @@ body,
   li:hover
     transform: $transformScale
 
-
 // Helper Classes
 .full-width-image-container
   width: 100vw
@@ -155,7 +153,6 @@ body,
   @media screen and (max-width: $break-small)
     width: 10em
     height: 10em
-
 
 .post
   -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, .15)
@@ -201,7 +198,6 @@ body,
   @media screen and (max-width: $break-small)
     width: 10em
     height: 10em
-
 
 .post-excerpt
   padding-left: 1em
@@ -262,7 +258,6 @@ body,
 
 .form-container:hover
   transform: $transformScale
-
 
 .form-title
   text-transform: uppercase
@@ -358,7 +353,7 @@ body,
       text-align: left
     a
       display: flex
-      flex-direction: row;
+      flex-direction: row
       align-items: center
       width: 100%
       padding: 0.25rem 0
@@ -376,7 +371,6 @@ body,
   -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, .15)
   -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, .15)
   box-shadow: 0 5px 10px rgba(0, 0, 0, .15)
-
 
 .links-title
   padding: 1rem 0
@@ -434,11 +428,11 @@ body,
   margin: auto
   padding-bottom: 0.5rem
   @media screen and (max-width: $break-big)
-   width: 12%
+    width: 12%
   @media screen and (max-width: $break-medium)
-   width: 13%
+    width: 13%
   @media screen and (max-width: $break-small)
-   width: 20%
+    width: 20%
 
 .form-button
   color: $default-black !important
@@ -447,6 +441,5 @@ body,
 
 .form-button:hover
   transform: $transformScale
-
 
 @import "~bulma"
